<resources>
    <string name="app_name" translatable="false">Maxx</string>
    <string name="app_name_long">Dum-Dum — a cute way of calling someone Dumb.</string>
    <string name="app_desc">Simple Android client for SOCKS, HTTP &amp; HTTPS proxies, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Home</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title" translatable="false">DumDum</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription" formatted="false">%1$d/%2$d proxies, %3$s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated" formatted="false">Updated: %1$s</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="port_http">HTTP Proxy Port</string>
    <string name="port_transproxy">Transproxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">App Settings</string>
    <string name="language">Language</string>
    <string name="language_summary">Select your preferred language</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_stop">Show Stop Button</string>
    <string name="show_stop_sum">If you don’t want to use Quick Tile as the switch</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="port_local_dns">Local DNS Port</string>
    <string name="require_transproxy">Enable Transproxy Inbound</string>
    <string name="transproxy_mode">Transproxy Mode</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="profile_name">Connection Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Port</string>
    <string name="username">Username</string>
    <string name="username_opt">Username (optional)</string>
    <string name="password_opt">Password (optional)</string>
    <string name="key_opt">Key (optional)</string>
    <string name="password">Password</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Encryption</string>
    <string name="network">Network</string>
    <string name="header_type">Header Type</string>
    <string name="ws_host">WebSocket Host</string>
    <string name="ws_path">WebSocket Path</string>
    <string name="http_host">HTTP Host</string>
    <string name="http_path">HTTP Path</string>
    <string name="grpc_service_name">gRPC ServiceName</string>
    <string name="tls">Use TLS</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="early_data_header_name">Early Data Header Name</string>
    <string name="encryption">Encryption</string>
    <string name="extra_headers">Extra Headers</string>
    <string name="config_type">Config Type</string>
    <string name="edit_config">Edit Config</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="route_rules_provider">Rule Assets Provider</string>
    <string name="route_opt_bypass_lan">Bypass LAN</string>
    <string name="traffic_sniffing">Traffic Sniffing</string>
    <string name="proxied_apps">Apps VPN mode</string>
    <string name="proxied_apps_summary">Configure VPN mode for selected apps</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Enable proxy on startup/app update if it was running before</string>
    <string name="ignore_battery_optimizations">Disable Battery Optimizations</string>
    <string name="ignore_battery_optimizations_sum">Allow battery usage in background without restrictions</string>
    <string name="plugin">Plugin</string>
    <string name="plugin_configure">Configure…</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="always_show_address">Always Show Address</string>
    <string name="always_show_address_sum">Always display the server address on the configuration
        card</string>
    <string name="append_http_proxy">Append HTTP Proxy to VPN</string>
    <string name="append_http_proxy_sum">HTTP proxy will be used directly from (browser/ some
        supported apps), without going through the virtual NIC device (Android 10+)</string>
    <string name="profile_traffic_statistics">Traffic Statistics</string>
    <string name="profile_traffic_statistics_summary">When disabled, traffic statistics is not counted</string>
    <string name="tun_implementation">TUN Implementation</string>
    <string name="resolve_destination">Resolve Destination</string>
    <string name="resolve_destination_summary">If the destination address is a domain, it is then
        passed out based on the IPv6 strategy (conflicts with FakeDNS)</string>
    <string name="mtu" translatable="false">MTU</string>
    <string name="acquire_wake_lock">Acquire WakeLock</string>
    <string name="acquire_wake_lock_summary">Keep CPU on</string>
    <string name="app_tls_version">Subscription Min TLS Version</string>
    <string name="domain_strategy_for_remote">Domain strategy for Remote</string>
    <string name="domain_strategy_for_direct">Domain strategy for Direct</string>
    <string name="domain_strategy_for_server">Domain strategy for Server address</string>
    <string name="show_bottom_bar">Show bottom bar like SagerNet</string>
    <string name="enable_clash_api">Enable Clash API</string>
    <string name="log_level">Log Level</string>
    <string name="enable_clash_api_summary">Provide clash api and yacd dashboard at 127.0.0.1:9090</string>
    <string name="bypass_lan_in_core">Bypass LAN in Core</string>
    <string name="show_group_in_notification">Show group name in notification</string>
    <string name="bandwidth_limit">Bandwidth Limit</string>
    <string name="bandwidth_limit_enabled">Enable Bandwidth Limit</string>
    <string name="bandwidth_limit_value">Limit Value</string>
    <string name="bandwidth_limit_unit">Limit Unit</string>
    <string name="bandwidth_usage">Data Usage</string>
    <string name="bandwidth_reset">Reset Usage</string>
    <string name="allow_insecure_on_request_sum">Disable certificate checking when updating
        subscriptions</string>
    <string name="global_allow_insecure">Ignore Proxy SSL Certificate</string>
    <string name="network_change_reset_connections">Reset outbound connections when network changes</string>
    <string name="wake_reset_connections">Reset outbound connections when device wake from sleep</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="logging">Logging</string>
    <string name="connection">Connection</string>
    <string name="application">Application</string>
    <string name="routes_settings">Routes Settings</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_selected">Delete Selected</string>
</resources>