<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings" app:isPreferenceVisible="false">
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_maps_360"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" 
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme"
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="profileTrafficStatistics"
            app:summary="@string/profile_traffic_statistics_summary"
            app:title="@string/profile_traffic_statistics"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="showDirectSpeed"
            app:summary="@string/show_direct_speed_sum"
            app:title="@string/show_direct_speed"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:key="showGroupInNotification"
            app:title="@string/show_group_in_notification"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_center_focus_weak_24"
            app:key="alwaysShowAddress"
            app:summary="@string/always_show_address_sum"
            app:title="@string/always_show_address"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/routes_settings">
        <SwitchPreference
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
        <SwitchPreference
            app:key="bypassLanInCore"
            app:title="@string/bypass_lan_in_core"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="resolveDestination"
            app:summary="@string/resolve_destination_summary"
            app:title="@string/resolve_destination"
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/rules_dat_provider"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_rule_folder_24"
            app:key="rulesProvider"
            app:title="@string/route_rules_provider"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_dns">
        <EditTextPreference
            app:defaultValue="tls://8.8.4.4\ntls://8.8.8.8"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="ipv4_only"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_remote"
            app:title="@string/domain_strategy_for_remote"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <EditTextPreference
            app:defaultValue="local"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="ipv4_only"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_direct"
            app:title="@string/domain_strategy_for_direct"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="ipv4_only"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_server"
            app:title="@string/domain_strategy_for_server"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_camera_24"
            app:key="enableDnsRouting"
            app:summary="@string/dns_routing_message"
            app:title="@string/enable_dns_routing"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            app:icon="@drawable/ic_action_lock"
            app:key="enableFakeDns"
            app:summary="@string/fakedns_message"
            app:title="@string/enable_fakedns"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/inbound_settings" app:isPreferenceVisible="false">
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="mixedPort"
            app:title="@string/port_proxy"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="appendHttpProxy"
            app:summary="@string/append_http_proxy_sum"
            app:title="@string/append_http_proxy" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_nat_24"
            app:key="allowAccess"
            app:summary="@string/allow_access_sum"
            app:title="@string/allow_access" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_misc" app:isPreferenceVisible="false">
        <SwitchPreference
            app:icon="@drawable/baseline_construction_24"
            app:key="enableClashAPI"
            app:summary="@string/enable_clash_api_summary"
            app:title="@string/enable_clash_api" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="allowInsecureOnRequest"
            app:title="@string/allow_insecure_on_request_sum" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1.2"
            app:entries="@array/app_tls_version"
            app:entryValues="@array/app_tls_version"
            app:key="appTLSVersion"
            app:title="@string/app_tls_version"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/advanced_settings">
        <Preference
            app:icon="@drawable/ic_device_developer_mode"
            app:key="advancedSettings"
            app:title="@string/advanced" />
    </PreferenceCategory>
</PreferenceScreen>
