<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password_opt" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/bandwidth_limit">
        <SwitchPreference
            app:key="enableBandwidthLimit"
            app:title="@string/bandwidth_limit_enabled"
            app:summary="Enable data usage limit for this profile" />

        <EditTextPreference
            app:key="bandwidthLimitValue"
            app:title="@string/bandwidth_limit_value"
            app:summary="Set the limit value"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:key="bandwidthLimitUnit"
            app:title="@string/bandwidth_limit_unit"
            app:entries="@array/bandwidth_unit_entries"
            app:entryValues="@array/bandwidth_unit_values"
            app:defaultValue="MB"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="bandwidthUsageInfo"
            app:title="Usage Information"
            app:summary="No usage data available" />

        <Preference
            app:key="resetBandwidthUsage"
            app:title="@string/bandwidth_reset"
            app:summary="Reset data usage counter for this profile" />
    </PreferenceCategory>
</PreferenceScreen> 