<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_close"
        android:icon="@drawable/ic_navigation_close"
        android:title="@android:string/cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_deselect_all"
        android:title="@string/deselect_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete_selected"
        app:showAsAction="always" />

</menu> 